bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: not found: value estsurmessage
while (estsurmessage()){
       ^BDR:2: error: not found: value litmessage
  if (litmessage()=="Z"){
      ^